[package]
name = "coding-gym-mate"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro.pezzato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
itertools = "0.8.2"
log = "0.4.8"
structopt = "0.3"
